[package]
name = "caliaconf"
version = "0.1.0"
authors = ["Paul-Emile Morruzzi <pe@morruzzi.fr>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
serde = "1.0.104"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
enclose = "1.1.8"
web-sys = { version ="0.3.35", features = [ "ScrollBehavior", "ScrollToOptions" ] }
shrinkwraprs = "0.3.0"
gloo-timers = {version = "0.2.0", features = ["futures"]}

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
